--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
-.idea/*
 node_modules
-.idea/workspace.xml
-.idea/workspace.xml
+.idea
+
